# packetscrubber

./: .gitignore  PacketScrubber.spec  README.md  build-windows-exe.bat  launch-gui.bat  launch-gui.sh  pyinstaller_entry.py  pyproject.toml
scripts/: build-windows.ps1
src/packetscrubber/: __init__.py  cli.py  gui.py  scrubber.py
tests/: test_scrubber.py
